cms: update About page "implementation"

--- a/src/pages/about/implementation.page.mdx
+++ b/src/pages/about/implementation.page.mdx
@@ -1,9 +1,9 @@
 ---
 title: Technical aspects
-toc: false
 navigationMenu:
   title: About the technical aspects
   position: 3
+toc: false
 ---
 
 import { ApiEndpoint } from '@/components/documentation/ApiEndpoint'
@@ -36,8 +36,8 @@ used:
 
 ## Information about the development of the website
 
-The development of the SSH Open Marketplace is managed via GitLab. If you want to know more, pay a
-visit to our GitLab instance: [https://gitlab.gwdg.de/sshoc](https://gitlab.gwdg.de/sshoc)
+The development of the SSH Open Marketplace is managed via GitHub. If you want to know more, pay a
+visit to our GitHub organization: [https://github.com/SSHOC](https://github.com/SSHOC/)
 
 ## API documentation
 
