--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -7,22 +7,27 @@ toc: false
 ---
 ## Editorial team
 
-The day-to-day operations of the SSH Open Marketplace are ensured by the **Editorial Team**. Since the 1st of May 2022, 8 members have been appointed by the Governing Board: 
+The day-to-day operations of the SSH Open Marketplace are ensured by the **Editorial Team**. Since the 1st of May 2022, 8 members have been appointed by the Governing Board. They were joined, in September 2022, by 9 volunteers. 
 
 - Laure Barbot - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU)
+- Elena Battaner Moro - Universidad Rey Juan Carlos in Madrid
+- Stefan Buddenbohm - Göttingen State and University Library
 - Cesare Concordia - Institute of Information Science and Technologies "Alessandro Faedo" (CNR-ISTI)
+- Maja Dolinar - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
 - Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU) 
+- Cristina Grisot - University of Zurich & Swiss National Center for Data & Services for the Humanities (DaSCH)
 - Klaus Illmayer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH) 
 - Martin Kirnbauer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)
-- Mari Kleemola - Finnish Social Science Data Archive (FSD), Tampere University
+- Mari Kleemola - CESSDA & Finnish Social Science Data Archive (FSD), Tampere University
 - Alexander König - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
-- Irena Vipavc - Slovenian Social Science Data Archives (ADP), University of Ljubljana
-
-An open call to recruit volunteers is open to complete the team.
+- Michael Kurzmeier - University College Cork
+- Barbara McGillivray - King's College London
+- Clara Parente Boavida - Iscte-Instituto Universitário de Lisboa
+- Christian Schuster - Babeș-Bolyai University Cluj-Napoca
+- Magdalena Wnuk - Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre
+- Irena Vipavc Brvar - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
 
 Please use the [contact form](/contact) if you want to get in touch.
-
-
 
 ## Creation team
 
