content: fix autolinks in mdx

--- a/src/pages/about/service.page.mdx
+++ b/src/pages/about/service.page.mdx
@@ -116,16 +116,16 @@ consult the following reports.
 - Laure Barbot, Yoan Moranville, Frank Fischer, Clara Petitfils, Matej Ďurčo, Klaus Illmayer, Tomasz
   Parkoła, Philipp Wieder, & Sotiris Karampatakis. (2019). SSHOC D7.1 System Specification - SSH
   Open Marketplace (1.0). Zenodo.
-  <https://doi.org/10.5281/zenodo.3547649>
+  [https://doi.org/10.5281/zenodo.3547649](https://doi.org/10.5281/zenodo.3547649)
 - Matej Ďurčo, Laure Barbot, Klaus Illmayer, Sotiris Karampatakis, Frank Fischer, Yoann Moranville,
   Joshua Tetteh Ocansey, Stefan Probst, Michał Kozak, Stefan Buddenbohm, & Seung-Bin Yim. (2021).
   7.2 Marketplace – Implementation (v1.0). Zenodo.
-  <https://doi.org/10.5281/zenodo.5749465>
+  [https://doi.org/10.5281/zenodo.5749465](https://doi.org/10.5281/zenodo.5749465)
 - Deliverable 7.3 Marketplace Interoperability will be added soon
 - Deliverable 7.4 Marketplace Data Population & Curation will be added soon
 - Clara Petitfils, Suzanne Dumouchel, Nicolas Larrousse, Edward J. Gray, Laure Barbot, Arnaud Roi,
   Matej Ďurčo, Klaus Illmayer, Stefan Buddenbohm, & Tomasz Parkola. (2021). D7.5 Marketplace -
-  Governance. <https://doi.org/10.5281/zenodo.5608487>
+  Governance. [https://doi.org/10.5281/zenodo.5608487](https://doi.org/10.5281/zenodo.5608487)
 - MS44 report Marketplace final release will be added soon
 
 Several consultations and presentations of the SSH Open Marketplace have been given in recent years,
@@ -133,18 +133,18 @@ some examples and references:
 
 - Frank Fischer, & Matej Durco. (2021, April 16). DARIAH Public Demonstration of the SSH Open
   Marketplace. Zenodo.
-  <https://doi.org/10.5281/zenodo.4696322>
+  [https://doi.org/10.5281/zenodo.4696322](https://doi.org/10.5281/zenodo.4696322)
 - Buddenbohm, Stefan, Barbot, Laure, Gray, Edward, Willems, Marieke, Larrousse, Nicolas, &
   Petitfils, Clara. (2021). Requesting Crowd Expertise: The SSH Open Marketplace and LIBER. Zenodo.
-  <https://doi.org/10.5281/zenodo.4757290>
+  [https://doi.org/10.5281/zenodo.4757290](https://doi.org/10.5281/zenodo.4757290)
 - Laure Barbot, & Edward Gray. (2021, September 29). Sharing digital tools in context: the SSH Open
   Marketplace. Zenodo.
-  <https://doi.org/10.5281/zenodo.5535742>
+  [https://doi.org/10.5281/zenodo.5535742](https://doi.org/10.5281/zenodo.5535742)
 - Laure Barbot, Tracey Biller, Daan Broeder, Ron Dekker, Matej Durco, Irene Vipavc, Marieke Willems.
   Agile development of the SSH Open Marketplace: User Workshop. ITM Web Conf. 33 04001 (2020). DOI:
   10.1051/itmconf/20203304001
 - Buddenbohm, Stefan. (2020). User Stories for the SSH Open Marketplace. Zenodo.
-  <https://doi.org/10.5281/zenodo.4312630>
+  [https://doi.org/10.5281/zenodo.4312630](https://doi.org/10.5281/zenodo.4312630)
 
 If you want to promote the SSH Open Marketplace as part of your own work, do not hesitate to reuse
 some of these materials, and to [let the team](/about/team) know about it, so that your work can
