--- a/src/pages/about/service.page.mdx
+++ b/src/pages/about/service.page.mdx
@@ -108,44 +108,45 @@ Using the SSH Open Marketplace, you can:
   API documentation in the ["technical aspects" section](/about/implementation), if you want to know
   more.
 
+## Communication Kit
+
+-[Download the SSH Open Marketplace logos](https://github.com/SSHOC/sshoc-marketplace-frontend/tree/main/public/assets/images)
+- [Download the flyer (printing and online dissemination)](https://doi.org/10.5281/zenodo.7503170)
+
+Reuse some of the slides produced by the team to present the SSH Open Marketplace:
+- Laure Barbot, & Klaus Illmayer. (2022, July 28). The SSH Open Marketplace: an introduction. Zenodo. [https://doi.org/10.5281/zenodo.6924238](https://doi.org/10.5281/zenodo.6924238) 
+- Laure Barbot, & Edward J. Gray. (2022, March 22). Partager et contextualiser ses outils numériques. Tout savoir sur le SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.6375530](https://doi.org/10.5281/zenodo.6375530) 
+- Franciska de Jong. (2022, January 26). A thematic marketplace: The SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.5906660](https://doi.org/10.5281/zenodo.5906660) 
+- Fischer, Frank, Burghardt, Manuel, Luhmann, Jan, Barbot, Laure, Moranville, Yoann, & Zarei, Alireza. (2021, March 26). Die Werkbänke der Digital Humanities: Zur Rolle von Tools und Software für die Forschungsarbeit. vDHd2021: "Experimente". Zenodo. [https://doi.org/10.5281/zenodo.4639228](https://doi.org/10.5281/zenodo.4639228) 
+
+A promotional video, “SSH Open Marketplace - explained the easy way”, has also been created and provides a nice overview of what the SSH Open Marketplace has to offer.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4tyZ4vhrM9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+
+If you want to promote the SSH Open Marketplace as part of your own work, do not hesitate to reuse some of these materials, and to let the team know about it, so that your work can also be referenced in this section.
+
+
+
 ## Want to know more?
 
 To know all the details that guided the development choices of the SSH Open Marketplace, you can
 consult the following reports.
 
-- Laure Barbot, Yoan Moranville, Frank Fischer, Clara Petitfils, Matej Ďurčo, Klaus Illmayer, Tomasz
-  Parkoła, Philipp Wieder, & Sotiris Karampatakis. (2019). SSHOC D7.1 System Specification - SSH
+- Laure Barbot, Yoan Moranville, Frank Fischer, Clara Petitfils, Matej Ďurčo, Klaus Illmayer, Tomasz Parkoła, Philipp Wieder, & Sotiris Karampatakis. (2019). SSHOC D7.1 System Specification - SSH
   Open Marketplace (1.0). Zenodo.
   [https://doi.org/10.5281/zenodo.3547649](https://doi.org/10.5281/zenodo.3547649)
 - Matej Ďurčo, Laure Barbot, Klaus Illmayer, Sotiris Karampatakis, Frank Fischer, Yoann Moranville,
   Joshua Tetteh Ocansey, Stefan Probst, Michał Kozak, Stefan Buddenbohm, & Seung-Bin Yim. (2021).
   7.2 Marketplace – Implementation (v1.0). Zenodo.
   [https://doi.org/10.5281/zenodo.5749465](https://doi.org/10.5281/zenodo.5749465)
-- Deliverable 7.3 Marketplace Interoperability will be added soon
-- Deliverable 7.4 Marketplace Data Population & Curation will be added soon
+- Alexander König, & Dieter Van Uytvanck. (2020). D7.3 Marketplace - Interoperability. [https://doi.org/10.5281/zenodo.5871651](https://doi.org/10.5281/zenodo.5871651) 
+- Edward Gray, Nicolas Larrousse, Clara Petitfils, Laure Barbot, Frank Fischer, Matej Ďurčo, Klaus Illmayer, Cesare Condordia, Alexander Konig, Dieter Van Uytvanck, & Stefan Buddenbohm. (2021). D7.4 Marketplace – Data population & curation (v1.0). Zenodo. [https://doi.org/10.5281/zenodo.5783358](https://doi.org/10.5281/zenodo.5783358) 
 - Clara Petitfils, Suzanne Dumouchel, Nicolas Larrousse, Edward J. Gray, Laure Barbot, Arnaud Roi,
   Matej Ďurčo, Klaus Illmayer, Stefan Buddenbohm, & Tomasz Parkola. (2021). D7.5 Marketplace -
   Governance. [https://doi.org/10.5281/zenodo.5608487](https://doi.org/10.5281/zenodo.5608487)
-- MS44 report Marketplace final release will be added soon
-
-Several consultations and presentations of the SSH Open Marketplace have been given in recent years,
-some examples and references:
-
-- Frank Fischer, & Matej Durco. (2021, April 16). DARIAH Public Demonstration of the SSH Open
-  Marketplace. Zenodo.
-  [https://doi.org/10.5281/zenodo.4696322](https://doi.org/10.5281/zenodo.4696322)
-- Buddenbohm, Stefan, Barbot, Laure, Gray, Edward, Willems, Marieke, Larrousse, Nicolas, &
-  Petitfils, Clara. (2021). Requesting Crowd Expertise: The SSH Open Marketplace and LIBER. Zenodo.
-  [https://doi.org/10.5281/zenodo.4757290](https://doi.org/10.5281/zenodo.4757290)
-- Laure Barbot, & Edward Gray. (2021, September 29). Sharing digital tools in context: the SSH Open
-  Marketplace. Zenodo.
-  [https://doi.org/10.5281/zenodo.5535742](https://doi.org/10.5281/zenodo.5535742)
-- Laure Barbot, Tracey Biller, Daan Broeder, Ron Dekker, Matej Durco, Irene Vipavc, Marieke Willems.
-  Agile development of the SSH Open Marketplace: User Workshop. ITM Web Conf. 33 04001 (2020). DOI:
-  10.1051/itmconf/20203304001
-- Buddenbohm, Stefan. (2020). User Stories for the SSH Open Marketplace. Zenodo.
-  [https://doi.org/10.5281/zenodo.4312630](https://doi.org/10.5281/zenodo.4312630)
-
-If you want to promote the SSH Open Marketplace as part of your own work, do not hesitate to reuse
-some of these materials, and to [let the team](/about/team) know about it, so that your work can
-also be referenced in the list above.
+- Frank Fischer, & Matej Durco. (2021, April 16). DARIAH Public Demonstration of the SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.4696322](https://doi.org/10.5281/zenodo.4696322) 
+- Buddenbohm, Stefan, Barbot, Laure, Gray, Edward, Willems, Marieke, Larrousse, Nicolas, & Petitfils, Clara. (2021). Requesting Crowd Expertise: The SSH Open Marketplace and LIBER. Zenodo. [https://doi.org/10.5281/zenodo.4757290](https://doi.org/10.5281/zenodo.4757290) 
+- Laure Barbot, & Edward Gray. (2021, September 29). Sharing digital tools in context: the SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.5535742](https://doi.org/10.5281/zenodo.5535742)
+- Laure  Barbot, Tracey  Biller, Daan  Broeder, Ron  Dekker, Matej  Durco, Irene  Vipavc, Marieke  Willems. Agile development of the SSH Open Marketplace: User Workshop. ITM Web Conf. 33 04001 (2020). DOI: 10.1051/itmconf/20203304001  
+- Buddenbohm, Stefan. (2020). User Stories for the SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.4312630](https://doi.org/10.5281/zenodo.4312630)
