--- a/src/pages/about/implementation.page.mdx
+++ b/src/pages/about/implementation.page.mdx
@@ -5,7 +5,6 @@ navigationMenu:
   position: 3
 toc: false
 ---
-
 import { ApiEndpoint } from '@/components/documentation/ApiEndpoint'
 import { ApiParamTextField } from '@/components/documentation/ApiParamTextField'
 import { ApiParamSelect } from '@/components/documentation/ApiParamSelect'
@@ -32,12 +31,36 @@ used:
 - [Data Aggregation and proCessing Engine (DACE)](https://gitlab.pcss.pl/dl-team/aggregation/dace)
   developed by the Poznan Supercomputing and Networking Center (PSNC)
 
-![Data ingestion workflow](/assets/cms/images/mp_ingest_workflow.png 'Illustration: Overview of the different components of the ingestion workflow')
+![Data ingestion workflow](/assets/cms/images/sshoc_mp_ingestiontool.jpg)
 
-## Information about the development of the website
+## Deployment of the website & configuration
 
-The development of the SSH Open Marketplace is managed via GitHub. If you want to know more, pay a
-visit to our GitHub organization: [https://github.com/SSHOC](https://github.com/SSHOC/)
+The development of the SSH Open Marketplace is managed via GitHub. If you want to know more, pay a visit to our GitHub organization: [https://github.com/SSHOC](https://github.com/SSHOC/)
+
+The system consists of multiple components deployed as separate containers in a dockerized environment:
+- backend component consists of the core application implemented in Java and
+- a Solr index and a PostgreSQL database deployed as separate containers
+- frontend component
+
+
+The system is deployed in three instances:
+- development - used by developers for testing new functionality
+- staging - instance based on the latest version of the code and data model 
+- production - stable instance publicly available at [marketplace.sshopencloud.eu](https://marketplace.sshopencloud.eu/)
+ 
+A *continuous integration and deployment setup* is in place, where pushing changes to corresponding branches in the git repository trigger a set of tests to be run and upon successful completion a new version of the application is automatically deployed.
+
+There are a number of dynamic parts of the data model, which require configuration or initial population upon installation of a new naked instance. These “system data” are maintained as YAML-configuration files as part of the backend source code and are applied during initialisation of the system. This includes:
+- Dynamic properties or property-types, e.g. activity-type, keyword
+- Actor roles, e.g. contributor, author, funder
+- Item relation types, e.g. is-documented-by, mentions
+- Concept relation types, e.g. related, broader, sameAs
+- Sources, e.g. TAPoR, Programming Historian
+- Actor sources, e.g. ORCID, DBLP, Wikidata
+
+[Vocabularies](https://marketplace.sshopencloud.eu/contribute/metadata-guidelines#vocabularies), though also part of the system data, are not loaded automatically on application startup and need to be ingested separately. Similarly, if changes to the system data are needed for an existing system with a populated database, corresponding API calls can be applied by the Administrator.
+
+To ensure data consistency and prevent data loss due to evolution of the data model, the [Liquibase](https://www.liquibase.org/) tool is used to manage the database schema migrations. Corresponding configuration files for the schema migration are also maintained as YAML files and are executed only once during application startup, before loading of the system data.
 
 ## API documentation
 
@@ -46,19 +69,19 @@ for anyone to use. Some of the functionalities are closed, but most are opened, 
 and retrieving detailed information on all items of the Marketplace.
 
 You can inspect the API Swagger documentation here:
-[https://marketplace-api.sshopencloud.eu/swagger-ui/index.html?url=/v3/api-docs](https://marketplace-api.sshopencloud.eu/swagger-ui/index.html?url=/v3/api-docs)
+<https://marketplace-api.sshopencloud.eu/swagger-ui/index.html?url=/v3/api-docs>
 
 The endpoint of the SSH Open Marketplace API is:
-[https://marketplace-api.sshopencloud.eu/api/](https://marketplace-api.sshopencloud.eu/api/)
+<https://marketplace-api.sshopencloud.eu/api/>
 
 The API responses are in JSON and follow the data model that we have created for the Marketplace
 (see "Data model" section above).
 
 For example, you can request a description of all the "tools and services" that the SSH Open
 Marketplace provides at
-[https://marketplace-api.sshopencloud.eu/api/tools-services](https://marketplace-api.sshopencloud.eu/api/tools-services)
+<https://marketplace-api.sshopencloud.eu/api/tools-services>
 and following pages
-[https://marketplace-api.sshopencloud.eu/api/tools-services?page=2](https://marketplace-api.sshopencloud.eu/api/tools-services?page=2).
+<https://marketplace-api.sshopencloud.eu/api/tools-services?page=2>.
 
 <ApiEndpoint title="Item search" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
   <ApiParamTextField label="Search" param="q" placeholder="Search term" />
