cms: update About page "frequently-asked-questions"

--- a/src/pages/about/frequently-asked-questions.page.mdx
+++ b/src/pages/about/frequently-asked-questions.page.mdx
@@ -5,7 +5,6 @@ navigationMenu:
   position: 6
 toc: false
 ---
-
 Welcome to the FAQ section of the SSH Open Marketplace. Here you can find the most asked questions
 and their answers. This page will be updated regularly to address the most frequently asked
 questions.
@@ -17,20 +16,17 @@ questions.
   like to add or report a bug using the Report an issue function which is available on each page.
   All the ways to contribute are explained in
   [this dedicated section of the website](/contribute/overview).
-
 - **Why do you promote commercial software?**
 
   The SSH Open Marketplace promotes any tools and services used by the SSH research communities. Our
   goal is to encourage the uptake of open methods, but we choose to also showcase the reality of
   existing research practices and this includes commercial software. We are not affiliated to or
   receiving any revenues from the commercial software referenced in this website.
-
 - **Is the SSH Open Marketplace multilingual?**
 
   For the sake of simplicity the SSH Open Marketplace comes (for the moment) with an English user
   interface. Furthermore, the majority of the records are in English. However, the service
   encourages the addition of records in other European languages.
-
 - **As a researcher in Social Sciences and Humanities, why should I contribute to the SSH Open
   Marketplace?**
 
@@ -38,10 +34,12 @@ questions.
   materials you've created as items in the Marketplace - or to support the uptake of the tools you
   use in your work on a daily basis - by creating or enriching the records of the resources you are
   familiar with.
-
 - **Can I upload data to the SSH Open Marketplace?**
 
   As a simple answer: no. The SSH Open Marketplace is a discovery portal for tools & services,
   training materials, datasets, publications and workflows, not a research data repository. To find
   suitable research data repositories for your research data we advise that you consult established
   services like [re3data](https://www.re3data.org/).
+- **What is the difference between the SSH Open Marketplace and the [EOSC Marketplace](https://marketplace.eosc-portal.eu/)? Where should I put my service?** 
+
+  The SSH Open Marketplace is geared towards the social sciences and humanities, whereas EOSC is for all sciences. As such, the requirements are more strict to enter the EOSC Marketplace. In general, EOSC Marketplace entries are mature, high TRL (Technological Readiness Level) services and are onboarded by the institutional entity responsible for their development and maintenance. Entries on the SSH Open Marketplace are, above all, more focused on social sciences and humanities, which permits us to be more flexible in accepting tools and services still in development. As well, the contextualisation of the SSH Open Marketplace is another difference. Finally, know that all SSH related tools in the EOSC Marketplace are automatically ingested in the SSH Open Marketplace, so there is no need to worry about double posting.
