cms: update Contribute page "overview"

--- a/src/pages/contribute/overview.page.mdx
+++ b/src/pages/contribute/overview.page.mdx
@@ -1,9 +1,9 @@
 ---
 title: Overview
-toc: false
 navigationMenu:
   title: Overview
   position: 1
+toc: false
 ---
 
 The Social Sciences and Humanities Open Marketplace needs you! The SSH Open Marketplace is the
@@ -40,5 +40,5 @@ touch with us!
 
 Like the SSH Open Marketplace? Speak about it around you and help us to promote this discovery
 service for Social Sciences and Humanities.
-[Here are some useful materials](/about/data-population#inclusion-criteria). Let us know when and where you
+[Here are some useful materials](/about/service#communication-kit). Let us know when and where you
 have acted as an ambassador of the Marketplace and contact us if you need additional information!
