cms: update Contribute page "create-an-individual-item"

--- a/src/pages/contribute/create-an-individual-item.page.mdx
+++ b/src/pages/contribute/create-an-individual-item.page.mdx
@@ -1,16 +1,17 @@
 ---
 title: Create an individual item
-toc: false
 navigationMenu:
   title: Create an individual item
   position: 3
+toc: false
 ---
-
 With the curation dashboard of the Marketplace you may suggest new items through the convenient
 create an individual item function. In order to access this feature, you will need to log in, which
 should be possible very conveniently using already existing credentials.
 
-![Sign in the SSH Open Marketplace steps](/assets/cms/images/sign-in.png)
+![Sign in the SSH Open Marketplace steps 1 and 2](/assets/cms/images/signin1.png)
+
+![Sign in the SSH Open Marketplace step 3](/assets/cms/images/signin2.png)
 
 Once you click on the "Create" button for your chosen Marketplace entry, you will be automatically
 proposed the various fields that need to be filled out.
