fix: use nocookie url for embedded youtube video on about page

--- a/src/pages/about/service.page.mdx
+++ b/src/pages/about/service.page.mdx
@@ -122,7 +122,7 @@ Reuse some of the slides produced by the team to present the SSH Open Marketplac
 
 A promotional video, “SSH Open Marketplace - explained the easy way”, has also been created and provides a nice overview of what the SSH Open Marketplace has to offer.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4tyZ4vhrM9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/4tyZ4vhrM9s" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowFullScreen width="100%" style={{ aspectRatio: '16 / 9' }} />
 
 If you want to promote the SSH Open Marketplace as part of your own work, do not hesitate to reuse some of these materials, and to let the team know about it, so that your work can also be referenced in this section.
 
