cms: update Contribute page "moderator-guidelines"

--- a/src/pages/contribute/moderator-guidelines.page.mdx
+++ b/src/pages/contribute/moderator-guidelines.page.mdx
@@ -1,11 +1,10 @@
 ---
 title: Moderator Guidelines
-toc: true
 navigationMenu:
   title: Moderator Guidelines
   position: 5
+toc: true
 ---
-
 The Moderation of the SSH Open Marketplace can be considered in two ways, the first being the
 **moderation and approval** of newly submitted items, and the second being the **sustained curation
 and assurance of data quality** for already-existing items in the Marketplace.
@@ -33,7 +32,6 @@ as possible, especially those that are recommended. See
    list of items waiting for approval/rejection.
 
    ![Items to moderate - screenshot](/assets/cms/images/items-to-moderate.png)
-
 2. By clicking on the "Edit" button, a moderator can access the edit form of a suggested item and
    check the metadata
 3. Approve or reject a suggested version of an item.
@@ -113,7 +111,7 @@ over the other metadata fields to ensure that they are correct.
 
 In order to gain an overview of the SSH Open Marketplace data and to perform some analysis to
 prioritise the curation tasks and improve the Marketplace data quality,
-[a Python library and a set of Jupyter notebooks](https://gitlab.gwdg.de/sshoc/marketplace-curation)
+[a Python library and a set of Jupyter notebooks](https://github.com/SSHOC/marketplace-curation)
 have been created by Cesare Concordia (CNR). These flexible scripts allow moderators and
 administrators to query the SSH Open Marketplace with advanced parameters and filters and, in some
 cases, to write back to the system to flag some items for curation in the editorial dashboard.
@@ -141,8 +139,7 @@ authorisations (=credentials) are needed.
 ### Vocabulary management
 
 Some of the metadata fields used in the Marketplace are
-[using (controlled) vocabularies](/contribute/moderator-guidelines#vocabulary-management), meaning
-that contributors can select concepts among a pre-existing list. For some fields this list is open
+[using (controlled) vocabularies](/contribute/moderator-guidelines#vocabulary-management), meaning that contributors can select concepts among a pre-existing list. For some fields this list is open
 and new terms can be added (i.e. keywords) if they don't appear yet, for some others no new concepts
 can be added (i.e activity is using the TaDIRAH taxonomy that is developed and maintained outside of
 the Marketplace).
