--- a/src/pages/contribute/metadata-guidelines.page.mdx
+++ b/src/pages/contribute/metadata-guidelines.page.mdx
@@ -1,11 +1,10 @@
 ---
 title: Metadata guidelines
-toc: true
 navigationMenu:
   title: Metadata guidelines
   position: 7
+toc: true
 ---
-
 These guidelines include recommendations on metadata fields to be used while creating and/or
 reviewing an item entry in the SSH Open Marketplace.
 
@@ -84,11 +83,11 @@ should check if you are a moderator.
     </tr>
     <tr>
       <th scope="row">activity</th>
-      <td colSpan="5">recommended</td>
+      <td colSpan="6">recommended</td>
     </tr>
     <tr>
       <th scope="row">keyword</th>
-      <td colSpan="5">recommended</td>
+      <td colSpan="6">recommended</td>
     </tr>
     <tr>
       <th scope="row">discipline</th>
@@ -97,14 +96,6 @@ should check if you are a moderator.
     <tr>
       <th scope="row">language</th>
       <td colSpan="5">recommended</td>
-    </tr>
-    <tr>
-      <th scope="row">tool-family</th>
-      <td colSpan="1">recommended</td>
-    </tr>
-    <tr>
-      <th scope="row">service-type</th>
-      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">mode-of-use</th>
@@ -170,9 +161,6 @@ should check if you are a moderator.
     <tr>
       <th scope="row">termsofuse-url</th>
       <td colSpan="2">recommended</td>
-      <td />
-      <td />
-      <td colSpan="1">recommended</td>
     </tr>
     <tr>
       <th scope="row">terms-of-use</th>
@@ -305,7 +293,7 @@ should check if you are a moderator.
 | Publisher                         | An entity responsible for making the resource available.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | Moderators will check for coherence of publisher selected with linked MP entry. (=> manually)                                                                                                                                                                                                 |
 | Related items                     | Relations between SSH Open Marketplace items help to create context. If you know about a training material describing or citing a tool or service for example, use this to provide more context. To relate to items external to the Marketplace, use the `See also` property.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | Relations between items are central to ensure contextualisation and quality of the Marketplace entries! Check the coherence of the relations suggested (=> manually) Automatic checks will determine presence or not and numbers of relations (=> dashboard).                                 |
 |                                   | Relation type: relates-to/is-related-to: to mark a simple relation between items; documents/is-documented-by: use the document relation when a resource provides information on another; mentions/is-mentioned-in: when one resource refers to another. By default, the relation-type is "related-to"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |                                                                                                                                                                                                                                                                                               |
-| Resource category                 | Contributors will select a resource category type, drawn from the [EOSC categories controlled vocabulary](https://vocabs.sshopencloud.eu/vocabularies/eosc-resource-category/en/). This helps refining the resource's nature and function. Follows [EOSC Portal Providers Documentation](<https://eosc-portal.eu/providers-documentation/eosc-provider-portal-resource-profile#Resource%20Category,%20Subcategory%20(and%20Supercategory)>)                                                                                                                                                                                                                                                                                                                                                 | Moderator will check for consistency between categories added and the resource described. (=> manually)                                                                                                                                                                                       |
+| Resource category                 | Contributors will select a resource category type, drawn from the [EOSC categories controlled vocabulary](https://vocabs.sshopencloud.eu/vocabularies/eosc-resource-category/en/). This helps refining the resource's nature and function. Follows [EOSC Portal Providers Documentation](https://eosc-portal.eu/providers-documentation/eosc-provider-portal-resource-profile#Resource%20Category,%20Subcategory%20(and%20Supercategory))                                                                                                                                                                                                                                                                                                                                                   | Moderator will check for consistency between categories added and the resource described. (=> manually)                                                                                                                                                                                       |
 | See also                          | This is a URL-based field. It references additional materials linked to the resource, but external to the SSH Open Marketplace. These are interesting resources we don't want to add as entries in the MP, but that can be useful for the users. For relations between MP entries, see `related items`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | Moderator will check for consistency between references added and the resource described. (=> manually) Automatic checks with other URLs-based fields (=> dashboard) Check that link is working (=> dashboard)                                                                                |
 | Service Level URL                 | Webpage with the information about the levels of performance of the Resource that a Provider is expected to deliver. For example, link to a Service Level Agreement (SLA) or Service Level Specification (SLS) applicable to the Resource. Follows [EOSC Portal Providers Documentation](https://eosc-portal.eu/providers-documentation/eosc-provider-portal-resource-profile)                                                                                                                                                                                                                                                                                                                                                                                                              | Moderators will check for coherence of service level url with linked MP entry. (=> manually) Check that link is working (=> dashboard)                                                                                                                                                        |
 | Standard                          | Contributors will select a standard used by the tool or service, drawn from a controlled vocabulary built within the [PARTHENOS project](https://www.parthenos-project.eu/portal/ssk-2). If there is no match in the list of concepts provided, contributors can suggest a new standard.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | Moderators will check for coherence of the standard selected with linked MP entry. (=> manually)                                                                                                                                                                                              |
@@ -330,13 +318,13 @@ should check if you are a moderator.
 | geographical- availability | [EOSC Geographical Availability List](https://vocabs.sshopencloud.eu/vocabularies/eosc-geographical-availability/eoscGeographicalAvailabilityScheme) | closed             |
 | life-cycle-status          | [EOSC Life Cycle Status List](https://vocabs.sshopencloud.eu/vocabularies/eosc-life-cycle-status/eoscLifeCycleStatusScheme)                          | closed             |
 | resource-category          | [EOSC Resource Category List](https://vocabs.sshopencloud.eu/vocabularies/eosc-resource-category/eoscResourceCategoryScheme)                         | closed             |
-| intended-audience          | [audience](https://vocabs.sshopencloud.eu/vocabularies/sshoc-audience/audienceScheme)                                                                | open               |
-| mode-of-use                | [Invocation types](https://vocabs.sshopencloud.eu/vocabularies/invocation-type/invocationTypeScheme)                                                 | open               |
+| intended-audience          | [audience](https://vocabs.sshopencloud.eu/vocabularies/sshoc-audience/audienceScheme)                                                                | closed             |
+| mode-of-use                | [Invocation types](https://vocabs.sshopencloud.eu/vocabularies/invocation-type/invocationTypeScheme)                                                 | closed             |
 | language                   | [ISO 639-3 Language Codes](https://vocabs.acdh.oeaw.ac.at/iso6393/Schema)                                                                            | closed             |
 | keyword                    | Keywords from SSHOC MP                                                                                                                               | open               |
-| object-format              | Media Types from IANA                                                                                                                                | closed             |
-| discipline                 | [ÖFOS 2012. Austrian Fields of Science and Technology Classification 2012](https://vocabs.acdh.oeaw.ac.at/oefosdisciplines/Schema)                   | closed             |
-| license                    | Software License from SPDX                                                                                                                           | closed             |
-| standard                   | SSK Standards List                                                                                                                                   | open               |
+| object-format              | [Media Types from IANA](https://vocabs.sshopencloud.eu/vocabularies/media-type/mediaTypeScheme)                                                      | closed             |
+| discipline                 | [ÖFOS 2012. Austrian Fields of Science and Technology Classification 2012](https://vocabs.acdh.oeaw.ac.at/oefos/de/page/Schema)                      | closed             |
+| license                    | [Software License from SPDX](https://vocabs.sshopencloud.eu/vocabularies/software-license/en/)                                                       | closed             |
+| standard                   | [SSK Standards List](https://vocabs.sshopencloud.eu/vocabularies/standard/standardScheme)                                                            | closed             |
 | activity                   | [TaDiRAH 2](https://vocabs.dariah.eu/tadirah/)                                                                                                       | closed             |
-| publication-type           | The Bibliographic Ontology Concept Scheme                                                                                                            | closed             |
+| publication-type           | [The Bibliographic Ontology Concept Scheme](https://vocabs.sshopencloud.eu/vocabularies/publication-type/en/)                                        | closed             |
