cms: update Contribute page "metadata-guidelines"

--- a/src/pages/contribute/metadata-guidelines.page.mdx
+++ b/src/pages/contribute/metadata-guidelines.page.mdx
@@ -320,7 +320,7 @@ should check if you are a moderator.
 | resource-category          | [EOSC Resource Category List](https://vocabs.sshopencloud.eu/vocabularies/eosc-resource-category/eoscResourceCategoryScheme)                         | closed             |
 | intended-audience          | [audience](https://vocabs.sshopencloud.eu/vocabularies/sshoc-audience/audienceScheme)                                                                | closed             |
 | mode-of-use                | [Invocation types](https://vocabs.sshopencloud.eu/vocabularies/invocation-type/invocationTypeScheme)                                                 | closed             |
-| language                   | [ISO 639-3 Language Codes](https://vocabs.acdh.oeaw.ac.at/iso6393/Schema)                                                                            | closed             |
+| language                   | [ISO 639-3 Language Codes](https://vocabs.acdh.oeaw.ac.at/iso639_3/)                                                                                 | closed             |
 | keyword                    | Keywords from SSHOC MP                                                                                                                               | open               |
 | object-format              | [Media Types from IANA](https://vocabs.sshopencloud.eu/vocabularies/media-type/mediaTypeScheme)                                                      | closed             |
 | discipline                 | [ÖFOS 2012. Austrian Fields of Science and Technology Classification 2012](https://vocabs.acdh.oeaw.ac.at/oefos/de/page/Schema)                      | closed             |
