cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -17,8 +17,8 @@ The day-to-day operations of the SSH Open Marketplace are ensured by the **Edito
 - Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU) 
 - Cristina Grisot - University of Zurich & Swiss National Center for Data & Services for the Humanities (DaSCH)
 - Klaus Illmayer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH) 
+- Taina Jääskeläinen - CESSDA & Finnish Social Science Data Archive (FSD), Tampere University
 - Martin Kirnbauer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)
-- Mari Kleemola - CESSDA & Finnish Social Science Data Archive (FSD), Tampere University
 - Alexander König - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
 - Michael Kurzmeier - University College Cork
 - Barbara McGillivray - King's College London
@@ -27,32 +27,12 @@ The day-to-day operations of the SSH Open Marketplace are ensured by the **Edito
 - Magdalena Wnuk - Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre
 - Irena Vipavc Brvar - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
 
+Former members of the Editorial Board: Mari Kleemola (CESSDA/FSD)
+
 Please use the [contact form](/contact) if you want to get in touch.
 
 ## Creation team
 
-The concept, design and development of the SSH Open Marketplace has been carried out by SSHOC WP7
-members
+The concept, design and development of the SSH Open Marketplace has been carried out as part of the SSHOC project by Work Package 7 team members: Frank Fischer, Yoann Moranville, Laure Barbot, Eliza Papaki, Erzsébet Tóth-Czifra, Carsten Thiel, Dieter van Uytvanck, Alexander König, Tomasz Parkoła, Michał Kozak, Szymon Wolarz, Justyna Wytrążek, Ola Nowak, Eliza Kalata, Matej Ďurčo, Stefan Probst, Klaus Illmayer, Seung-Bin Yim, Martin Kirnbauer, Stefan Buddenbohm, Joseph Dung, Alireza Zarei, Marieke Willems, Leonardo Marino, Tracey Biller, Filomena Minichiello, Stephanie Parker, Martin Kaltenböck, Sotiris Karampatakis, Nicolas Larrousse, Clara Petitfils, Suzanne Dumouchel, Edward Gray, Cesare Concordia, Chryssoula Bekiari and Athina Kritsotaki.
 
-- **[DARIAH ERIC](https://www.dariah.eu/)**: Frank Fischer, Yoann Moranville, Laure Barbot, Eliza
-  Papaki, Erzsébet Tóth-Czifra
-- **[CESSDA ERIC](https://www.cessda.eu/)**: Carsten Thiel
-- **[CLARIN ERIC](https://www.clarin.eu/)**: Dieter van Uytvanck, Alexander König
-- **[PSNC](https://www.psnc.pl/)**: Tomasz Parkoła, Michał Kozak, Szymon Wolarz, Justyna Wytrążek,
-  Ola Nowak, Eliza Kalata
-- **[OEAW](https://www.oeaw.ac.at/acdh/)**: Matej Ďurčo, Stefan Probst, Klaus Illmayer, Seung-Bin
-  Yim, Martin Kirnbauer
-- **[UGOE](https://www.sub.uni-goettingen.de/sub-aktuell/)**: Stefan Buddenbohm, Joseph Dung,
-  Alireza Zarei
-- **[TRUST-IT](https://www.trust-itservices.com/)**: Marieke Willems, Leonardo Marino, Tracey
-  Biller, Filomena Minichiello, Stephanie Parker
-- **[SWC](https://semantic-web.com/)**: Martin Kaltenböck, Sotiris Karampatakis
-- **[CNRS/Huma-Num](https://www.huma-num.fr/)**: Nicolas Larrousse, Clara Petitfils, Suzanne
-  Dumouchel, Edward Gray
-- **[CNR](https://www.isti.cnr.it/en/)**: Cesare Concordia
-- **[FORTH](https://www.ics.forth.gr/isl/centre-cultural-informatics)**: Chryssoula Bekiari, Athina
-  Kritsotaki
-
-and by our **community of testers**, and especially: Agnieszka Szulińska, Maurizio Toscano, Kasia
-Karpinska, Vanessa Hannesschläger, Simon Saldner, Judith Wehmeyer, Ami Saji, Genevieve Michaud,
-Irena Vipavc, Veronika Heider, Jakob Lenardic, Melina Jander...
+… and by our community of testers, and especially: Agnieszka Szulińska, Maurizio Toscano, Kasia Karpinska, Vanessa Hannesschläger, Simon Saldner, Judith Wehmeyer, Ami Saji, Genevieve Michaud, Irena Vipavc, Veronika Heider, Jakob Lenardic, Melina Jander...
