cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -2,12 +2,26 @@
 title: The team behind the Marketplace
 navigationMenu:
   title: About the team
-  position: 3
+  position: 4
 toc: false
 ---
+The SSH Open Marketplace was created with funding from the [SSHOC project](/about/sshoc-eosc). After the end of the project, 3 ERICs and some of their national nodes decided to ensure the sustainability of the SSH Open Marketplace, under the umbrella of the SSH Open Cluster. They act as a **Governing Board** for the SSH Open Marketplace and define the Marketplace strategic policy with regards to scientific, technical and managerial matters.
+
+[![DARIAH](/assets/cms/images/dariah-eu-logo.png)](https://dariah.eu)
+
+[![CESSDA](/assets/cms/images/cessda-logo.png)](https://www.cessda.eu)
+
+[![CLARIN](/assets/cms/images/clarin-logo.png)](https://clarin.eu)
+
+Two institutions act as service providers on behalf of these ERICs: the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service, and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as hosting and maintenance for the service.
+
+
+
 ## Editorial team
 
-The day-to-day operations of the SSH Open Marketplace are ensured by the **Editorial Team**. Since the 1st of May 2022, 8 members have been appointed by the Governing Board. They were joined, in September 2022, by 9 volunteers. 
+An **Editorial Team** ensures the day-to-day maintenance and the data quality of the SSH Open Marketplace. The Editorial Team, liaising with the service providers and the end-users of the service (SSH researchers and support staff for researchers) ensures the technical running of operation, the effectiveness of the curation process and the editorial policy's successful implementation.
+
+Since the 1st of May 2022, 8 members have been appointed by the Governing Board. They were joined, in September 2022, by 9 volunteers. 
 
 - Laure Barbot - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU)
 - Elena Battaner Moro - Universidad Rey Juan Carlos in Madrid
