cms: update About page "service"

--- a/src/pages/about/service.page.mdx
+++ b/src/pages/about/service.page.mdx
@@ -3,7 +3,7 @@ title: What is the SSH Open Marketplace?
 navigationMenu:
   title: About the service
   position: 1
-toc: true
+toc: false
 ---
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/), is a
