cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -1,7 +1,7 @@
 ---
 title: The team behind the Marketplace
 navigationMenu:
-  title: About the team
+  title: Who are we?
   position: 4
 toc: false
 ---
