cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -7,15 +7,17 @@ toc: false
 ---
 The SSH Open Marketplace was created with funding from the [SSHOC project](/about/sshoc-eosc). After the end of the project, 3 ERICs and some of their national nodes decided to ensure the sustainability of the SSH Open Marketplace, under the umbrella of the SSH Open Cluster. They act as a **Governing Board** for the SSH Open Marketplace and define the Marketplace strategic policy with regards to scientific, technical and managerial matters.
 
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
 [![DARIAH](/assets/cms/images/dariah-eu-logo.png)](https://dariah.eu)
 
 [![CESSDA](/assets/cms/images/cessda-logo.png)](https://www.cessda.eu)
 
 [![CLARIN](/assets/cms/images/clarin-logo.png)](https://clarin.eu)
 
+</div>
+
 Two institutions act as service providers on behalf of these ERICs: the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service, and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as hosting and maintenance for the service.
-
-
 
 ## Editorial team
 
